@@ -1793,6 +1793,10 @@ class ViewsConfiguratorMixin(object):
         qualified URL (e.g. starts with ``http://`` or similar).  In this
         mode, the ``name`` is used as the prefix of the full URL when
         generating a URL using :meth:`pyramid.request.Request.static_url`.
+        Furthermore, if a protocol-relative URL (e.g. ``//example.com/images``)
+        is used as the ``name`` argument, the generated URL will use the
+        protocol of the request (http or https, respectively).
+
         For example, if ``add_static_view`` is called like so:
 
         .. code-block:: python
@@ -1801,19 +1805,13 @@ class ViewsConfiguratorMixin(object):
 
         Subsequently, the URLs generated by
         :meth:`pyramid.request.Request.static_url` for that static view will
-        be prefixed with ``http://example.com/images``:
+        be prefixed with ``http://example.com/images`` (the external webserver
+        listening on ``example.com`` must be itself configured to respond
+        properly to such a request.):
 
         .. code-block:: python
 
            static_url('mypackage:images/logo.png', request)
-
-        When ``add_static_view`` is called with a ``name`` argument that is
-        the URL ``http://example.com/images``, subsequent calls to
-        :meth:`pyramid.request.Request.static_url` with paths that start with
-        the ``path`` argument passed to ``add_static_view`` will generate a
-        URL something like ``http://example.com/logo.png``.  The external
-        webserver listening on ``example.com`` must be itself configured to
-        respond properly to such a request.
 
         See :ref:`static_assets_section` for more information.
         """
@@ -1858,6 +1856,12 @@ class StaticURLInfo(object):
                     kw['subpath'] = subpath
                     return request.route_url(route_name, **kw)
                 else:
+                    parsed = url_parse(url)
+                    if not parsed.scheme:
+                        # parsed.scheme is readonly, so we have to parse again
+                        # to change the scheme, sigh.
+                        url = urlparse.urlunparse(url_parse(
+                            url, scheme=request.environ['wsgi.url_scheme']))
                     subpath = url_quote(subpath)
                     return urljoin(url, subpath)
 
@@ -1886,7 +1890,7 @@ class StaticURLInfo(object):
             # make sure it ends with a slash
             name = name + '/'
 
-        if url_parse(name)[0]:
+        if url_parse(name).netloc:
             # it's a URL
             # url, spec, route_name
             url = name
